--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -11,9 +11,7 @@ ja:
         email: 'メールアドレス'
         password: 'パスワード'
         password_confirmation: 'パスワード確認'
-        last_name: '姓'
-        first_name: '名'
-        full_name: '氏名'
+        name: 'ユーザー名'
         avatar: 'アバター'
       board:
         title: 'タイトル'
